Fix por ahora del z-index del panel superior y video

--- a/flota-y-caladeros/css/style.css
+++ b/flota-y-caladeros/css/style.css
@@ -114,7 +114,7 @@ body {
   position: absolute;
   right: 0;
   top: 0;
-  z-index: 5;
+  z-index: 4;
 }
 
 .panel_title {
@@ -149,10 +149,13 @@ body {
   font-family: 'Lato Regular';
   font-size: 18px;
   margin-bottom: 10px;
+  text-align: center;
 }
 
 .panel_text_md {
   font-size: 25px;
+  margin-bottom: 0;
+  font-weight: bold;
 }
 
 .panel_stick {
@@ -162,6 +165,18 @@ body {
 .panel .selected {
   font-family: 'Lato Black';
   color: rgb(214, 0, 28);
+}
+
+.panel_text_1, .panel_text_2 {
+  display: none;
+}
+
+.all_types .panel_text_1 {
+  display: block;
+}
+
+[class="interactive_map"] .boat_positioning_layer[class*="tipo"] + .panel .panel_text_2 {
+  display: block;
 }
 
 /* ---------------------------------------------------------------------------
@@ -244,7 +259,7 @@ body {
                               4.5) =boat_positioning_layer:
 ------------------------------------------------------------------------------
 --------------------------------------------------------------------------- */
-.boat_positioning_layer{
+.boat_positioning_layer {
   grid-column: 1;
   grid-row: 1;
   height: 100vh;
@@ -255,6 +270,12 @@ body {
   box-shadow: 0px 0px 220px 220px rgb(0 0 0 / 30%) inset;
   z-index: 4;
 }
+
+.all_types .boat_positioning_layer {
+  pointer-events: none;
+  opacity: 0;
+}
+
 /* [class="boat_positioning_layer"] .boat_position {
     opacity:1;
     pointer-events: all;
@@ -291,8 +312,11 @@ body {
   height: auto;
   margin: auto;
 }
-.led_light.boat_type_icon{
-  margin:auto 10px auto 0;
+
+.led_light.boat_type_icon {
+  /* margin:auto 10px auto 0; */
+  width: 200px;
+  height: 200px;
 }
 /* ---------------------------------------------------------------------------
 ------------------------------------------------------------------------------
@@ -314,31 +338,45 @@ body {
   -o-animation: blinkRed 0.5s infinite;
   animation: blinkRed 0.5s infinite;
 } */
-.boat_type_selector{
-  padding: 12px;
+.boat_type_selector {
+  /* padding: 12px;
   border-radius: 15px;
   border: 2px dotted white;
+  width: max-content;
+  margin: auto auto 4% auto; */
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-column-gap: 35px;
-  grid-row-gap: 15px;
+  grid-template-rows: 1fr 1fr;
   z-index: 2;
-  width: max-content;
-  margin: auto auto 4% auto;
-}
-.boat_type{
-  display: flex;
-  align-items: center;
+  padding: 290px 30% 68px 30%;
+  pointer-events: none;
+  opacity: 0;
   transition: 0.5s;
 }
-.boat_type .boat_icon{
+
+.all_types .boat_type_selector {
+  pointer-events: all;
+  opacity: 1;
+}
+
+.boat_type {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transition: 0.5s;
+}
+
+.boat_type .boat_icon {
   margin: auto 0;
   margin-right: 15px;
 }
-.boat_type_name{
-  font-family: "Lato Regular";
-  font-size: 16px;
-  color: white;
+
+.boat_type_name {
+  font-family: "Lato Bold";
+  font-size: 35px;
+  color: #D6001C;
+  margin-top: 25px;
 }
 /* .boat_type.arrastrero .led_light,
 .boat_type.tipo_1 .led_light,
